@@ -1,3 +1,10 @@
+2009-01-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Bump copyright years.
+	* aclocal.in (write_aclocal, version): Bump copyright years.
+	* automake.in (gen_copyright, version): Likewise.
+	* doc/automake.texi: Likewise.
+
 2008-12-29  Chris Pickett  <chris.pickett@mail.mcgill.ca>  (tiny change)
 
 	* doc/automake.texi (LIBOBJS): Clarify overriding of
@@ -3764,7 +3771,7 @@
 
 -----
 
-Copyright (C) 2005, 2006, 2007, 2008  Free Software Foundation, Inc.
+Copyright (C) 2005, 2006, 2007, 2008, 2009  Free Software Foundation, Inc.
 
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
